# uvlarm_y2y2

./: .gitignore  LICENSE  README.md  talker.py  test.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/Stage/share/Stage/: package.sh
install/stage_ros2/share/stage_ros2/: local_setup.sh  package.sh
install/tutorial_pkg/share/ament_index/resource_index/parent_prefix_path/: tutorial_pkg
install/tutorial_pkg/share/tutorial_pkg/: local_setup.sh  package.sh
install/tutorial_pkg/share/tutorial_pkg/cmake/: tutorial_pkgConfig.cmake
log/: latest_build
playground/: augmented_detect.py  augmented_vision.py  basic_move.py  basic_move_test.py  detect_ghost.py  listener.py  online_sync_launch.py  precise_detedct.py  robot_bumper.py  robot_camera.py  robot_camera_test1.py  robot_move.py  scan_echo.py  supercamera.py  supercamerabackup.py  supermove.py  supermove_proto.py  supermovebackup.py  test-camera.py  ultimate_move.py  vision_test.py
src/grp_pibot22/: CMakeLists.txt  package.xml
src/grp_pibot22/config/: challenge1_rviz2_config.rviz
src/grp_pibot22/launch/: detect_test.yaml  launch_basic_move.yaml  launch_basic_move_integ.yaml  launch_basic_move_test.yaml  launch_robot_basic_move.yaml  launch_robot_camera.yaml  launch_robot_move_test.yaml  launch_scan_echo.yaml  mapper_params_online_sync.yaml  simulation.yaml  simulation_v1_launch.yaml  tbot_v1_launch.yaml  tbot_v2_launch.yaml  vision_launch.yaml
src/grp_pibot22/scripts/: augmented_detect  augmented_vision  basic_move  basic_move_integ  basic_move_test  camera  detect_ghost  detect_ghost_backup  detect_test  precise_detect  robot_bumper  robot_camera  robot_move  scan_echo  supercamera  supercamera_proto  supermove  ultimate_move  vision_test
src/tutorial_pkg/: CMakeLists.txt  package.xml
src/tutorial_pkg/scripts/: listener  scan_echo  test_move
tutorial_pkg/: CMakeLists.txt
tutorial_pkg/scripts/: talker
