<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grp_pibot22</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="13812282727@163.com">y2y2</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>kobuki_ros_interfaces</depend>
  <depend>time</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
